src/test/ui/mismatched_types/E0053.stderr
error[E0053]: method `foo` has an incompatible type for trait
  --> $DIR/E0053.rs:9:15
   |
LL |     fn foo(x: u16);
   |               --- type in trait
...
LL |     fn foo(x: i16) { }
   |               ^^^ expected `u16`, found `i16`
   |
   = note: expected fn pointer `fn(u16)`
              found fn pointer `fn(i16)`

error[E0053]: method `bar` has an incompatible type for trait
  --> $DIR/E0053.rs:11:12
   |
LL |     fn bar(&self);
   |            ----- type in trait
...
LL |     fn bar(&mut self) { }
   |            ^^^^^^^^^
   |            |
   |            types differ in mutability
   |            help: consider changing the mutability to match the trait: `&self`
   |
   = note: expected fn pointer `fn(&Bar)`
              found fn pointer `fn(&mut Bar)`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0053`.
